Fix crash when closing Krita too quickly while some stroke is still rendering

KisCanvas2 is directly connected to the image, therefore, it should not
be destroyed before the the connection is removed and all the callers
has completed their requests.

BUG:419021